--- a/src/assets/scss/components/_components.main-admin.scss
+++ b/src/assets/scss/components/_components.main-admin.scss
@@ -2,13 +2,18 @@
   height: 100vh;
 
   .ant-layout-header {
+    position: relative;
+    background: $color_white;
     height: 50px;
-    background: $color_yellow_main;
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
   }
 
   .ant-menu-horizontal {
-    background: $color_yellow_main;
+    height: 50px;
+    line-height: 50px;
+    background: $color_white;
     text-align: left;
+    border: 0px;
   }
 
   .c-main-admin__layout {
@@ -17,16 +22,19 @@
 }
 
 .c-logo {
-  @include size(120px, 31px);
-  margin: 16px 28px 16px 0;
+  @include size(120px, 40px);
+  margin: -10px 40px 0px -10px;
   float: left;
+
+  img {
+    height: 75px;
+  }
 }
 
 .c-table-user {
   background: $bg_white;
   padding: 24px;
   margin: 0;
-  min-height: 280px;
   width: 100%;
 
   .c-table-user__seach {
@@ -41,13 +49,30 @@
     @include size(30px);
     border-radius: 100px;
   }
+
+  .sub-info p {
+    margin-top: 15px;
+  }
+
+  .delete-icon {
+    cursor: pointer;
+    margin-left: 10px;
+  }
 }
 
-.c-header-menu {
-  line-height: 50px !important;
+.c-menu-head {
+  cursor: pointer;
+  line-height: 50px;
+  @include position(absolute, 0, 30px, '', '');
 }
 
 .c-sider-menu {
   height: 100%;
   border: 0px;
+  box-shadow: 0 15px 15px 0 rgba(0, 0, 0, 0.1) !important;
+
+  .ant-menu-submenu-title,
+  .ant-menu-item {
+    text-align: left;
+  }
 }
