--- a/src/assets/scss/utilities/_utilities.commons.scss
+++ b/src/assets/scss/utilities/_utilities.commons.scss
@@ -83,3 +83,11 @@
 .u-pointer-prevent {
   pointer-events: none !important;
 }
+
+.u-ml-10 {
+  margin-left: 10px !important;
+}
+
+.u-mb-0 {
+  margin-bottom: 0px !important;
+}
